See #22337: Make window for attached GPX waypoint images resizable
This fixes broken tests.

git-svn-id: https://josm.openstreetmap.de/svn/trunk@18593 0c6e7542-c601-0410-84e7-c038aed88b3b