@@ -3,28 +3,25 @@ package org.openstreetmap.josm.gui.layer.markerlayer;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
+import java.io.File;
 import java.net.MalformedURLException;
-import java.net.URL;
 
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
-import org.openstreetmap.josm.JOSMFixture;
+import org.junit.jupiter.api.extension.RegisterExtension;
+import org.openstreetmap.josm.TestUtils;
 import org.openstreetmap.josm.data.coor.LatLon;
 import org.openstreetmap.josm.data.gpx.GpxData;
 import org.openstreetmap.josm.data.gpx.WayPoint;
+import org.openstreetmap.josm.testutils.JOSMTestRules;
+import org.openstreetmap.josm.testutils.annotations.BasicPreferences;
 
 /**
  * Unit tests of {@link ImageMarker} class.
  */
+@BasicPreferences
 class ImageMarkerTest {
-
-    /**
-     * Setup tests
-     */
-    @BeforeAll
-    public static void setUpBeforeClass() {
-        JOSMFixture.createUnitTestFixture().init();
-    }
+    @RegisterExtension
+    static JOSMTestRules josmTestRules = new JOSMTestRules().main();
 
     /**
      * Unit test of {@link ImageMarker#ImageMarker}.
@@ -34,7 +31,7 @@ class ImageMarkerTest {
     void testImageMarker() throws MalformedURLException {
         ImageMarker marker = new ImageMarker(
                 LatLon.ZERO,
-                new URL("file://something.jpg"),
+                new File(TestUtils.getRegressionDataFile(12255, "G0016941.JPG")).toURI().toURL(),
                 new MarkerLayer(new GpxData(), null, null, null),
                 1d, 2d);
         marker.actionPerformed(null);
